// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailScreen snapshot food + vancouver 1`] = `
<RCTScrollView
  className="px-screen-x"
  contentContainerStyle={
    {
      "flexGrow": 1,
    }
  }
  testID="detail-screen"
>
  <View>
    <View
      className="flex-row items-center px-screen-x-tight py-2"
      testID="detail-topbar"
    >
      <View
        className="w-9"
      >
        <View
          accessibilityLabel="뒤로가기"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="w-9 h-9 rounded-icon-md items-center justify-center bg-light"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="detail-topbar-back"
        >
          <View
            accessible={false}
            importantForAccessibility="no"
            style={
              {
                "height": 22,
                "width": 22,
              }
            }
          >
            <svg
              fill="none"
              height={22}
              stroke="#11263C"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={2}
              viewBox="0 0 24 24"
              width={22}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m15 18-6-6 6-6"
                fill="none"
                stroke="#11263C"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        className="flex-1 items-center px-2"
      >
        <Text
          accessibilityRole="header"
          className="font-manrope-bold text-h3 text-navy"
          numberOfLines={1}
        >
          식비 · 밴쿠버
        </Text>
        <Text
          accessibilityRole="text"
          className="font-mulish text-tiny text-gray-2"
          numberOfLines={1}
        >
          1 CAD = 980원 · 04-30
        </Text>
      </View>
      <View
        className="w-9 items-end"
      />
    </View>
    <View
      className="px-screen-x mt-3"
    >
      <View
        className="rounded-hero p-4 bg-navy"
        style={
          {
            "shadowColor": "#11263C",
            "shadowOffset": {
              "height": 12,
              "width": 0,
            },
            "shadowOpacity": 0.18,
            "shadowRadius": 32,
          }
        }
        testID="detail-hero"
      >
        <View
          className="flex-row items-center justify-between"
        >
          <Text
            accessibilityRole="text"
            className="font-manrope-semibold text-mono-label text-white"
          >
            한 달 예상 총비용
          </Text>
        </View>
        <View
          className="flex-row items-end mt-3"
        >
          <View
            className="flex-1"
          >
            <Text
              accessibilityRole="text"
              className="font-mulish text-tiny text-white"
            >
              서울
            </Text>
            <Text
              accessibilityRole="header"
              className="font-manrope-bold text-h2 text-white"
              numberOfLines={1}
            >
              5.5만원
            </Text>
          </View>
          <View
            className="items-center px-2 shrink-0"
            testID="detail-hero-center"
          >
            <Text
              accessibilityRole="header"
              className="font-manrope-extrabold text-display text-orange"
              numberOfLines={1}
            >
              ↑1.4×
            </Text>
            <Text
              accessibilityRole="text"
              className="font-manrope-semibold text-mono-label text-white"
              numberOfLines={1}
            >
              식비 합계
            </Text>
          </View>
          <View
            className="flex-1 items-end"
          >
            <Text
              accessibilityRole="text"
              className="font-mulish text-tiny text-white"
            >
              밴쿠버
            </Text>
            <Text
              accessibilityRole="header"
              className="font-manrope-bold text-h2 text-white"
              numberOfLines={1}
              style={
                {
                  "fontFamily": "Manrope-ExtraBold",
                }
              }
            >
              7.5만원
            </Text>
          </View>
        </View>
        <View
          className="flex-row mt-4 gap-1 h-1"
          testID="detail-hero-bars"
        >
          <View
            className="bg-white rounded-full"
            style={
              {
                "flex": 0.4251648520165619,
                "opacity": 0.15,
              }
            }
            testID="detail-hero-bar-seoul"
          />
          <View
            className="bg-orange rounded-full"
            style={
              {
                "flex": 0.5748351479834382,
              }
            }
            testID="detail-hero-bar-city"
          />
        </View>
        <View
          className="mt-3"
          style={
            {
              "opacity": 0.7,
            }
          }
          testID="detail-hero-footer"
        >
          <Text
            accessibilityRole="text"
            className="font-mulish text-tiny text-white"
          >
            평균 가정 기준
          </Text>
        </View>
      </View>
    </View>
    <View
      className="px-screen-x mt-4 gap-4"
    >
      <View
        testID="detail-section-외식"
      >
        <View
          className="flex-row items-center justify-between mb-2"
        >
          <Text
            accessibilityRole="text"
            className="font-manrope-semibold text-mono-label text-gray-2"
          >
            외식
          </Text>
          <Text
            accessibilityRole="text"
            className="font-mulish text-tiny text-gray-2"
          >
            2
             항목
          </Text>
        </View>
        <View
          className="bg-white rounded-card border border-line overflow-hidden"
        >
          <View
            className="px-3"
          >
            <View
              className="flex-row items-center py-2.5 gap-3 border-b border-line"
              testID="detail-row-restaurantMeal"
            >
              <View
                className="w-9 h-9 items-center justify-center rounded-[10px] bg-orange-soft"
                testID="detail-row-restaurantMeal-emoji-box"
              >
                <Text
                  style={
                    {
                      "fontSize": 18,
                    }
                  }
                >
                  🍱
                </Text>
              </View>
              <View
                className="flex-1 min-w-0"
              >
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-small text-navy font-manrope-bold"
                  numberOfLines={1}
                >
                  식당 한 끼
                </Text>
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-tiny text-gray-2"
                  numberOfLines={1}
                >
                  9,000원
                   → 
                  2.2만원
                </Text>
              </View>
              <Text
                accessibilityRole="text"
                className="font-mulish text-small text-orange font-manrope-extrabold shrink-0"
                numberOfLines={1}
                testID="detail-row-restaurantMeal-mult"
              >
                ↑2.4×
              </Text>
            </View>
          </View>
          <View
            className="px-3"
          >
            <View
              className="flex-row items-center py-2.5 gap-3 "
              testID="detail-row-cafe"
            >
              <View
                className="w-9 h-9 items-center justify-center rounded-[10px] bg-light"
                testID="detail-row-cafe-emoji-box"
              >
                <Text
                  style={
                    {
                      "fontSize": 18,
                    }
                  }
                >
                  ☕
                </Text>
              </View>
              <View
                className="flex-1 min-w-0"
              >
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-small text-navy font-manrope-bold"
                  numberOfLines={1}
                >
                  카페 음료
                </Text>
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-tiny text-gray-2"
                  numberOfLines={1}
                >
                  5,000원
                   → 
                  5,880원
                </Text>
              </View>
              <Text
                accessibilityRole="text"
                className="font-mulish text-small text-gray font-manrope-extrabold shrink-0"
                numberOfLines={1}
                testID="detail-row-cafe-mult"
              >
                ↑1.2×
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        testID="detail-section-식재료"
      >
        <View
          className="flex-row items-center justify-between mb-2"
        >
          <Text
            accessibilityRole="text"
            className="font-manrope-semibold text-mono-label text-gray-2"
          >
            식재료
          </Text>
          <Text
            accessibilityRole="text"
            className="font-mulish text-tiny text-gray-2"
          >
            8
             항목
          </Text>
        </View>
        <View
          className="bg-white rounded-card border border-line overflow-hidden"
        >
          <View
            className="px-3"
          >
            <View
              className="flex-row items-center py-2.5 gap-3 border-b border-line"
              testID="detail-row-milk1L"
            >
              <View
                className="w-9 h-9 items-center justify-center rounded-[10px] bg-light"
                testID="detail-row-milk1L-emoji-box"
              >
                <Text
                  style={
                    {
                      "fontSize": 18,
                    }
                  }
                >
                  🥛
                </Text>
              </View>
              <View
                className="flex-1 min-w-0"
              >
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-small text-navy font-manrope-bold"
                  numberOfLines={1}
                >
                  우유 1L
                </Text>
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-tiny text-gray-2"
                  numberOfLines={1}
                >
                  3,000원
                   → 
                  3,332원
                </Text>
              </View>
              <Text
                accessibilityRole="text"
                className="font-mulish text-small text-gray font-manrope-extrabold shrink-0"
                numberOfLines={1}
                testID="detail-row-milk1L-mult"
              >
                ↑1.1×
              </Text>
            </View>
          </View>
          <View
            className="px-3"
          >
            <View
              className="flex-row items-center py-2.5 gap-3 border-b border-line"
              testID="detail-row-eggs12"
            >
              <View
                className="w-9 h-9 items-center justify-center rounded-[10px] bg-light"
                testID="detail-row-eggs12-emoji-box"
              >
                <Text
                  style={
                    {
                      "fontSize": 18,
                    }
                  }
                >
                  🥚
                </Text>
              </View>
              <View
                className="flex-1 min-w-0"
              >
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-small text-navy font-manrope-bold"
                  numberOfLines={1}
                >
                  계란 12개
                </Text>
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-tiny text-gray-2"
                  numberOfLines={1}
                >
                  5,500원
                   → 
                  7,350원
                </Text>
              </View>
              <Text
                accessibilityRole="text"
                className="font-mulish text-small text-gray font-manrope-extrabold shrink-0"
                numberOfLines={1}
                testID="detail-row-eggs12-mult"
              >
                ↑1.3×
              </Text>
            </View>
          </View>
          <View
            className="px-3"
          >
            <View
              className="flex-row items-center py-2.5 gap-3 border-b border-line"
              testID="detail-row-rice1kg"
            >
              <View
                className="w-9 h-9 items-center justify-center rounded-[10px] bg-light"
                testID="detail-row-rice1kg-emoji-box"
              >
                <Text
                  style={
                    {
                      "fontSize": 18,
                    }
                  }
                >
                  🍚
                </Text>
              </View>
              <View
                className="flex-1 min-w-0"
              >
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-small text-navy font-manrope-bold"
                  numberOfLines={1}
                >
                  쌀 1kg
                </Text>
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-tiny text-gray-2"
                  numberOfLines={1}
                >
                  4,500원
                   → 
                  4,116원
                </Text>
              </View>
              <Text
                accessibilityRole="text"
                className="font-mulish text-small text-gray font-manrope-extrabold shrink-0"
                numberOfLines={1}
                testID="detail-row-rice1kg-mult"
              >
                ↓0.9×
              </Text>
            </View>
          </View>
          <View
            className="px-3"
          >
            <View
              className="flex-row items-center py-2.5 gap-3 border-b border-line"
              testID="detail-row-chicken1kg"
            >
              <View
                className="w-9 h-9 items-center justify-center rounded-[10px] bg-light"
                testID="detail-row-chicken1kg-emoji-box"
              >
                <Text
                  style={
                    {
                      "fontSize": 18,
                    }
                  }
                >
                  🍗
                </Text>
              </View>
              <View
                className="flex-1 min-w-0"
              >
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-small text-navy font-manrope-bold"
                  numberOfLines={1}
                >
                  닭고기 1kg
                </Text>
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-tiny text-gray-2"
                  numberOfLines={1}
                >
                  1.2만원
                   → 
                  1.7만원
                </Text>
              </View>
              <Text
                accessibilityRole="text"
                className="font-mulish text-small text-gray font-manrope-extrabold shrink-0"
                numberOfLines={1}
                testID="detail-row-chicken1kg-mult"
              >
                ↑1.4×
              </Text>
            </View>
          </View>
          <View
            className="px-3"
          >
            <View
              className="flex-row items-center py-2.5 gap-3 border-b border-line"
              testID="detail-row-bread"
            >
              <View
                className="w-9 h-9 items-center justify-center rounded-[10px] bg-light"
                testID="detail-row-bread-emoji-box"
              >
                <Text
                  style={
                    {
                      "fontSize": 18,
                    }
                  }
                >
                  🍞
                </Text>
              </View>
              <View
                className="flex-1 min-w-0"
              >
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-small text-navy font-manrope-bold"
                  numberOfLines={1}
                >
                  식빵
                </Text>
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-tiny text-gray-2"
                  numberOfLines={1}
                >
                  4,000원
                   → 
                  4,410원
                </Text>
              </View>
              <Text
                accessibilityRole="text"
                className="font-mulish text-small text-gray font-manrope-extrabold shrink-0"
                numberOfLines={1}
                testID="detail-row-bread-mult"
              >
                ↑1.1×
              </Text>
            </View>
          </View>
          <View
            className="px-3"
          >
            <View
              className="flex-row items-center py-2.5 gap-3 border-b border-line"
              testID="detail-row-onion1kg"
            >
              <View
                className="w-9 h-9 items-center justify-center rounded-[10px] bg-light"
                testID="detail-row-onion1kg-emoji-box"
              >
                <Text
                  style={
                    {
                      "fontSize": 18,
                    }
                  }
                >
                  🧅
                </Text>
              </View>
              <View
                className="flex-1 min-w-0"
              >
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-small text-navy font-manrope-bold"
                  numberOfLines={1}
                >
                  양파 1kg
                </Text>
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-tiny text-gray-2"
                  numberOfLines={1}
                >
                  3,500원
                   → 
                  2,940원
                </Text>
              </View>
              <Text
                accessibilityRole="text"
                className="font-mulish text-small text-gray font-manrope-extrabold shrink-0"
                numberOfLines={1}
                testID="detail-row-onion1kg-mult"
              >
                ↓0.8×
              </Text>
            </View>
          </View>
          <View
            className="px-3"
          >
            <View
              className="flex-row items-center py-2.5 gap-3 border-b border-line"
              testID="detail-row-apple1kg"
            >
              <View
                className="w-9 h-9 items-center justify-center rounded-[10px] bg-light"
                testID="detail-row-apple1kg-emoji-box"
              >
                <Text
                  style={
                    {
                      "fontSize": 18,
                    }
                  }
                >
                  🍎
                </Text>
              </View>
              <View
                className="flex-1 min-w-0"
              >
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-small text-navy font-manrope-bold"
                  numberOfLines={1}
                >
                  사과 1kg
                </Text>
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-tiny text-gray-2"
                  numberOfLines={1}
                >
                  8,000원
                   → 
                  5,880원
                </Text>
              </View>
              <Text
                accessibilityRole="text"
                className="font-mulish text-small text-gray font-manrope-extrabold shrink-0"
                numberOfLines={1}
                testID="detail-row-apple1kg-mult"
              >
                ↓0.7×
              </Text>
            </View>
          </View>
          <View
            className="px-3"
          >
            <View
              className="flex-row items-center py-2.5 gap-3 "
              testID="detail-row-ramen"
            >
              <View
                className="w-9 h-9 items-center justify-center rounded-[10px] bg-orange-soft"
                testID="detail-row-ramen-emoji-box"
              >
                <Text
                  style={
                    {
                      "fontSize": 18,
                    }
                  }
                >
                  🍜
                </Text>
              </View>
              <View
                className="flex-1 min-w-0"
              >
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-small text-navy font-manrope-bold"
                  numberOfLines={1}
                >
                  라면
                </Text>
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-tiny text-gray-2"
                  numberOfLines={1}
                >
                  950원
                   → 
                  2,352원
                </Text>
              </View>
              <Text
                accessibilityRole="text"
                className="font-mulish text-small text-orange font-manrope-extrabold shrink-0"
                numberOfLines={1}
                testID="detail-row-ramen-mult"
              >
                ↑2.5×
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      className="px-screen-x mt-6 pt-4 border-t border-dashed border-line"
    >
      <View
        className="flex-row items-center justify-between"
      >
        <Text
          accessibilityRole="text"
          className="font-mulish text-small text-gray-2"
        >
          출처 
          1
          개 · 갱신 
          04-30
        </Text>
        <Text
          accessibilityRole="text"
          className="font-mulish text-small text-navy font-manrope-bold"
        >
          Statistics Canada CPI
        </Text>
      </View>
    </View>
    <View
      className="h-6"
    />
  </View>
</RCTScrollView>
`;

exports[`DetailScreen snapshot visa + vancouver (다른 골격) 1`] = `
<RCTScrollView
  className="px-screen-x"
  contentContainerStyle={
    {
      "flexGrow": 1,
    }
  }
  testID="detail-screen"
>
  <View>
    <View
      className="flex-row items-center px-screen-x-tight py-2"
      testID="detail-topbar"
    >
      <View
        className="w-9"
      >
        <View
          accessibilityLabel="뒤로가기"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="w-9 h-9 rounded-icon-md items-center justify-center bg-light"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="detail-topbar-back"
        >
          <View
            accessible={false}
            importantForAccessibility="no"
            style={
              {
                "height": 22,
                "width": 22,
              }
            }
          >
            <svg
              fill="none"
              height={22}
              stroke="#11263C"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={2}
              viewBox="0 0 24 24"
              width={22}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m15 18-6-6 6-6"
                fill="none"
                stroke="#11263C"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        className="flex-1 items-center px-2"
      >
        <Text
          accessibilityRole="header"
          className="font-manrope-bold text-h3 text-navy"
          numberOfLines={1}
        >
          비자/정착 · 밴쿠버
        </Text>
        <Text
          accessibilityRole="text"
          className="font-mulish text-tiny text-gray-2"
          numberOfLines={1}
        >
          1 CAD = 980원 · 04-30
        </Text>
      </View>
      <View
        className="w-9 items-end"
      />
    </View>
    <View
      className="px-screen-x mt-3"
    >
      <View
        className="rounded-hero p-4 bg-navy"
        style={
          {
            "shadowColor": "#11263C",
            "shadowOffset": {
              "height": 12,
              "width": 0,
            },
            "shadowOpacity": 0.18,
            "shadowRadius": 32,
          }
        }
        testID="detail-hero"
      >
        <View
          className="flex-row items-center justify-between"
        >
          <Text
            accessibilityRole="text"
            className="font-manrope-semibold text-mono-label text-white"
          >
            한 달 예상 총비용
          </Text>
        </View>
        <View
          className="flex-row items-end mt-3"
        >
          <View
            className="flex-1"
          >
            <Text
              accessibilityRole="text"
              className="font-mulish text-tiny text-white"
            >
              서울
            </Text>
            <Text
              accessibilityRole="header"
              className="font-manrope-bold text-h2 text-white"
              numberOfLines={1}
            >
              0원
            </Text>
          </View>
          <View
            className="items-center px-2 shrink-0"
            testID="detail-hero-center"
          >
            <Text
              accessibilityRole="header"
              className="font-manrope-extrabold text-display text-orange"
              numberOfLines={1}
            >
              신규
            </Text>
            <Text
              accessibilityRole="text"
              className="font-manrope-semibold text-mono-label text-white"
              numberOfLines={1}
            >
              비자/정착 합계
            </Text>
          </View>
          <View
            className="flex-1 items-end"
          >
            <Text
              accessibilityRole="text"
              className="font-mulish text-tiny text-white"
            >
              밴쿠버
            </Text>
            <Text
              accessibilityRole="header"
              className="font-manrope-bold text-h2 text-white"
              numberOfLines={1}
              style={
                {
                  "fontFamily": "Manrope-ExtraBold",
                }
              }
            >
              161.7만원
            </Text>
          </View>
        </View>
        <View
          className="flex-row mt-4 gap-1 h-1"
          testID="detail-hero-bars"
        >
          <View
            className="bg-orange rounded-full"
            style={
              {
                "flex": 1,
              }
            }
            testID="detail-hero-bar-city"
          />
        </View>
        <View
          className="mt-3"
          style={
            {
              "opacity": 0.7,
            }
          }
          testID="detail-hero-footer"
        >
          <Text
            accessibilityRole="text"
            className="font-mulish text-tiny text-white"
          >
            평균 가정 기준
          </Text>
        </View>
      </View>
    </View>
    <View
      className="px-screen-x mt-4 gap-4"
    >
      <View
        testID="detail-section-비자/정착"
      >
        <View
          className="flex-row items-center justify-between mb-2"
        >
          <Text
            accessibilityRole="text"
            className="font-manrope-semibold text-mono-label text-gray-2"
          >
            비자/정착
          </Text>
          <Text
            accessibilityRole="text"
            className="font-mulish text-tiny text-gray-2"
          >
            2
             항목
          </Text>
        </View>
        <View
          className="bg-white rounded-card border border-line overflow-hidden"
        >
          <View
            className="px-3"
          >
            <View
              className="flex-row items-center py-2.5 gap-3 border-b border-line"
              testID="detail-row-visa-fee"
            >
              <View
                className="w-9 h-9 items-center justify-center rounded-[10px] bg-light"
                testID="detail-row-visa-fee-emoji-box"
              >
                <Text
                  style={
                    {
                      "fontSize": 18,
                    }
                  }
                >
                  🛂
                </Text>
              </View>
              <View
                className="flex-1 min-w-0"
              >
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-small text-navy font-manrope-bold"
                  numberOfLines={1}
                >
                  비자 신청 수수료
                </Text>
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-tiny text-gray-2"
                  numberOfLines={1}
                >
                  0원
                   → 
                  14.7만원
                </Text>
              </View>
              <Text
                accessibilityRole="text"
                className="font-mulish text-small text-gray font-manrope-extrabold shrink-0"
                numberOfLines={1}
                testID="detail-row-visa-fee-mult"
              >
                1.0×
              </Text>
            </View>
          </View>
          <View
            className="px-3"
          >
            <View
              className="flex-row items-center py-2.5 gap-3 "
              testID="detail-row-visa-settle"
            >
              <View
                className="w-9 h-9 items-center justify-center rounded-[10px] bg-light"
                testID="detail-row-visa-settle-emoji-box"
              >
                <Text
                  style={
                    {
                      "fontSize": 18,
                    }
                  }
                >
                  📦
                </Text>
              </View>
              <View
                className="flex-1 min-w-0"
              >
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-small text-navy font-manrope-bold"
                  numberOfLines={1}
                >
                  정착 비용 (대략)
                </Text>
                <Text
                  accessibilityRole="text"
                  className="font-mulish text-tiny text-gray-2"
                  numberOfLines={1}
                >
                  0원
                   → 
                  147만원
                </Text>
              </View>
              <Text
                accessibilityRole="text"
                className="font-mulish text-small text-gray font-manrope-extrabold shrink-0"
                numberOfLines={1}
                testID="detail-row-visa-settle-mult"
              >
                1.0×
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      className="px-screen-x mt-6 pt-4 border-t border-dashed border-line"
    >
      <View
        className="flex-row items-center justify-between"
      >
        <Text
          accessibilityRole="text"
          className="font-mulish text-small text-gray-2"
        >
          출처 
          1
          개 · 갱신 
          04-30
        </Text>
        <Text
          accessibilityRole="text"
          className="font-mulish text-small text-navy font-manrope-bold"
        >
          IRCC
        </Text>
      </View>
    </View>
    <View
      className="h-6"
    />
  </View>
</RCTScrollView>
`;
